abstract +page de garde

--- a/biblo.bib
+++ b/biblo.bib
@@ -511,14 +511,16 @@ url="https://doi.org/10.1007/978-3-319-21569-3_9"
   file = {C\:\\Users\\lenovo\\Zotero\\storage\\DLDK2KHZ\\Kimball et Caserta - 2011 - The Data WarehouseETL Toolkit Practical Technique.pdf}
 }
 
-@article{naitEntropot,
-  title={Les entrepôts de données pour le décisionnel: Concepts et notions de base},
-  author={Sarah NAIT BAHLOUL},
-  pages={1--73},
-  year={2019},
-  publisher={USTO University}
-}
 
+@Inbook{naitEntropot,
+author="Sarah NAIT BAHLOUL",
+title="Les entrepôts de données pour le décisionnel: Concepts et notions de base",
+bookTitle="Les entrepôts de données pour le décisionnel: Concepts et notions de base",
+year="2019",
+publisher="USTO University",
+pages="33--36",
+url="https://drive.google.com/file/d/11O9U-dOV0R6z5rNibazUAKzFiaCoNwJa/view?usp=sharing"
+}
 @article{achard2001xml,
   title={XML, bioinformatics and data integration},
   author={Achard, Frederic and Vaysseix, Guy and Barillot, Emmanuel},
