--- a/parts/Implementation.tex
+++ b/parts/Implementation.tex
@@ -126,7 +126,7 @@ providing a wide variety of charts. For example, line charts, spline charts, are
 \section{Result}
 To validate the proposed solution, we visualize the data  using various technologies highlighted in previous sections, in this section we will go through the results that were obtained by this investigatory effort.
 \subsection{Processed Data Result}
-After the data cleansing using python and its libraries, and the data processing using Talend, we got these results:
+In the data preparation stage, the data is output from the integration stage using Talend in this format:
 
 
 \begin{figure}[h!]
@@ -148,6 +148,7 @@ Both dashboards are a web application developed using bootstrap\cite{Introductio
 
 \begin{itemize}
     \renewcommand{\labelitemi}{$\bullet$}
+    \newpage
     \item \textbf{Administration Dashboard:}
      \begin{figure}[h!]
         \center
