--- a/parts/abstract.tex
+++ b/parts/abstract.tex
@@ -2,10 +2,13 @@
     
     \begin{abstract}
         
-        The care of patients in a medical structure is provided by medical and paramedical staff. Coordination between staff involved in care requires efficient and synchronized communication. The presence of visual representations in this communication adds a dimension to the data which can improve the reading of these data, their interpretations, and thus accelerate the response time. The  goal of this subject is to design a visualization system for medical data in a conventional common language between the different health actors. \newline 
+        The care of patients in a medical structure is provided by medical and paramedical staff. Coordination between staff involved in care requires efficient and synchronized communication. The presence of visual representations in this communication adds a dimension to the data which can improve the reading of these data, their interpretations, and thus accelerate the response time. 
+        \bigbreak
+        In this project, four major points will be addressed: healthcare and data, information visualization  in this field, the different data management systems for multiple medical actors and the visualization system proposed to display personalized dashboards for different actors.
+ \newline 
 
         \begin{keywordEN}
-            Visualization; Medical data; Graphical Representation; Modeling; XML.\\
+            Visualization; Medical data; Graphical Representation; Modeling; XML; Personalized Dashboard.\\
             
         \end{keywordEN}
         
@@ -17,10 +20,14 @@
     
     \begin{abstract}
         
-        La prise en charge des patients dans une structure médicale est assurée par du personnel médical et paramédical. La coordination entre le personnel impliqué dans les soins nécessite une communication efficace et synchronisée. La présence de représentations visuelles dans cette communication ajoute une dimension aux données qui peut améliorer la lecture de ces données, leurs interprétations, et ainsi accélérer le temps de réponse. L'objectif de ce sujet est de concevoir un système de visualisation des données médicales dans un langage commun conventionnel entre les différents acteurs de santé. \newline 
+        La prise en charge des patients dans une structure médicale est assurée par du personnel médical et paramédical. La coordination entre le personnel impliqué dans les soins nécessite une communication efficace et synchronisée. La présence de représentations visuelles dans cette communication ajoute une dimension aux données qui peut améliorer la lecture de ces données, leurs interprétations, et ainsi accélérer le temps de réponse. 
+        \bigbreak
+ 
+        Dans ce projet, quatre points majeurs seront abordés : la santé et les données, la visualisation de l'information dans ce domaine, les différents systèmes de gestion de données pour de multiples acteurs médicaux et le système de visualisation proposé pour afficher des tableaux de bord personnalisés pour différents acteurs.
+        \newline 
 
         \begin{keywords}
-            Visualisation; Données médicales ; Représentation graphique; La modélisation; XML.\\
+            Visualisation; Données médicales ; Représentation graphique; La modélisation; XML; Tableau de bord personnalisé.\\
             
         \end{keywords}
         
