--- a/parts/conclusion.tex
+++ b/parts/conclusion.tex
@@ -1,11 +1,13 @@
 \chapter{Conclusion \& Future work}
 During this graduation project, we touched on many areas in the world of medicine and informatics.Many technologies and tools have been explored over time, starting with data integration systems and analytics to visualization. Each technology represents a universe to be discovered and many others still remain to be explored in the field of data integration and analyses.
 \bigbreak
-In this thesis, we introduced medical informatics presenting all the data types and actors contributing to it. We also presented the visualization field and the visualization pipeline and we have seen the data warehouse definition and the various data integration approaches.
-In our work, we presented a visualization system that deals with multiple data sources and produces a structured data form presented in an XML form that could be easily visualized to the multiple medical actors. However, it will be necessary to ensure to have the right tools and good practices. In our case, we were limited to open source tools and hardware, which severely limited us.
+In this thesis, we introduced medical informatics presenting all the data types and actors contributing to it. We also presented the visualization field and the visualization pipeline and we have seen the data warehouse definition and the various data integration approaches.\\
+In our work, we presented a visualization system that deals with multiple data sources and produces a structured data form presented in an XML form that could be easily visualized to the multiple medical actors through personalized dashboards. However, it will be necessary to ensure to have the right tools and good practices. In our case, we were limited to open source tools and hardware, which severely limited us.
 \bigbreak
 This work remains a first version made using the relatively limited means at our disposal. But it remains a good starting point that would be interesting to develop. Several points could improve this system, we mention:
 \begin{itemize}
+\renewcommand{\labelitemi}{$\bullet$}
+\item Automate the rendering process.
 \item Introduce continuous data integration.
 \item Mixe the processing step by machine learning systems.
 \item Get the system protected using some security systems.
