--- a/parts/health_and_data.tex
+++ b/parts/health_and_data.tex
@@ -96,7 +96,7 @@ Medical records are created by aggregating information from different sources: (
 
 
 \input{Tables/chapter1/source_data_medical.tex}
-
+\newpage
 \section{Medical records management}
 Self-tracking and documenting information about aspects of one’s personal and daily life has a long history. It is an effective method which helps us to learn more about ourselves, rather than depending on our limited memory\cite{alrehielyEvaluatingDifferentVisualization}.
 
