--- a/parts/introduction.tex
+++ b/parts/introduction.tex
@@ -48,13 +48,13 @@ Health Data Management is the practice of making sense of this data and managing
 
 \section{Purpose \& delimitations}
 
-The goal of this work is to design a visualization system in medical healthcare that provides personalized dashboards and insights for medical actors in a conventional common language.
+The goal of this work is to design a visualization system in medical healthcare that provides personalized dashboards and insights for medical actors.
  
-We intend to achieve our goal by designing a visualization system that manages data from different sources, and structures it using the eXtensible Markup Language (XML) then provides a personalized dashboard for each actor.
+We intend to achieve our goal by designing a visualization system that manages data from different sources, and structures it, then provides a personalized dashboard for each actor.
  \newline
- \textbf{First}, we created a data integration system that takes care of the data management.\newline 
- \textbf{Second}, we transformed the focus data to a structured format using XML.\newline
- \textbf{Third}, we designed a visual presentation after the data processing and formatting (a dashboard application).
+ \textbf{First}, we will create a data integration system that takes care of the data management.\newline 
+ \textbf{Second}, we will transform the focus data to a structured format.\newline
+ \textbf{Third}, we will design a visual presentation after the data processing and formatting (a dashboard application).
 
  
 \section{Document structure}
