--- a/parts/pageTitePage.tex
+++ b/parts/pageTitePage.tex
@@ -1,16 +1,18 @@
 \begin{titlepage}
     \begin{center}
-        MASTER DEGREE OF DATA \& INFORMATION SYSTEMS
-        \vspace*{1cm}
-        \\Department of Computer Science\\
         University of Science and Technology of Oran - Mohamed Boudiaf\\
+        MASTER DEGREE OF DATA \& INFORMATION SYSTEMS\\
+        Department of Computer Science\\
         Oran, Algeria\\
+        \vspace*{0.5cm}
+        \includegraphics[width=0.3\textwidth]{images/others/usto.jpg}
+        \vspace{1cm}
  
         {\large
         \textbf{Visualisation of health data in a medical sector}}
  
         \vspace{1cm}
-         Authored by
+        Authored by
              
         \vspace{0.5cm}
  
@@ -28,13 +30,10 @@
              
         
         \vspace{0.8cm}
-      
-        \includegraphics[width=0.3\textwidth]{images/others/usto.jpg}
-             
+    
+         
         \vspace{0.5cm}
-        Department of Computer Science\\
-        University of Science and Technology of Oran - Mohamed Boudiaf\\
-        Oran, Algeria\\
+        
         2022
              
     \end{center}
